--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,15 @@
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
     "antd": "^5.24.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.6",
     "vite": "^6.1.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
